@@ -45,14 +45,12 @@ alias mlabel="mtools -c mlabel"
 alias mmd="mtools -c mmd"
 alias mmount="mtools -c mmount"
 alias mrd="mtools -c mrd"
-alias mread="mtools -c mread"
 alias mmove="mtools -c mmove"
 alias mpartition="mtools -c mpartition"
 alias mren="mtools -c mren"
 alias mtoolstest="mtools -c mtoolstest"
 alias mtest="mtools -c  mtest"
 alias mtype="mtools -c mtype"
-alias mwrite="mtools -c mwrite"
 alias mzip="mtools -c mzip"
 
  (then close and re-open all terminals and shells, or type
