@@ -75,7 +75,6 @@ echo mmd >>mtools.1
 echo mmount >>mtools.1
 echo mmove >>mtools.1
 echo mrd >>mtools.1
-echo mread >>mtools.1
 echo mren >>mtools.1
 echo mtoolstest >>mtools.1
 echo mtype >>mtools.1
