@@ -1,2 +1,2 @@
-const char *mversion="pre6-3.9.8";
-const char *mdate = "27 May 2001";
+const char *mversion="3.9.8";
+const char *mdate = "03 February 2002";
